[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Puu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/tree1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/tree2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/tree3.tscn" type="PackedScene" id=4]

[node name="Node2D2" type="Node2D"]
script = ExtResource( 1 )

[node name="Puu1" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -16 )
frame = 2

[node name="Puu2" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, -32 )
frame = 4

[node name="Puu3" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, -64 )
frame = 10
